--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Students | App</title>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="manifest" href="manifest.json">
+    <title>Students | App</title>
 </head>
 
 <body>
@@ -17,6 +17,7 @@
 
     <!-- <script src="data.js"></script> -->
     <script src="javascript.js"></script>
+    <script src="serviceworker.js"></script>
 </body>
 
 </html>
